--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   image_picker: ^0.8.5
   email_validator: ^2.0.1
   google_maps_flutter: ^2.1.3
+  flutter_polyline_points: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_riverpod: ^1.0.3
 
 dev_dependencies:
   flutter_test:
